[gd_scene load_steps=3 format=3 uid="uid://cnriaqypeaine"]

[ext_resource type="Script" path="res://Menu_pausa.gd" id="1_xoffv"]
[ext_resource type="Texture2D" uid="uid://csb2b0rijfdep" path="res://Assets/Sprites/Menu/Sprite-MenuMejoras2.png" id="2_d5cyt"]

[node name="Menu_pausa" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_xoffv")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 300.0
offset_bottom = 200.0
texture = ExtResource("2_d5cyt")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 87.0
offset_top = 19.0
offset_right = 220.0
offset_bottom = 42.0
text = "PAUSA"

[node name="reiniciar" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 65.0
offset_top = 106.0
offset_right = 127.0
offset_bottom = 129.0
text = "Reiniciar"

[node name="reanudar" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 113.0
offset_top = 62.0
offset_right = 175.0
offset_bottom = 85.0
text = "Reanudar"

[node name="salir" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 168.0
offset_top = 109.0
offset_right = 230.0
offset_bottom = 132.0
text = "Salir "

[connection signal="button_up" from="TextureRect/reiniciar" to="." method="_on_reiniciar_button_up"]
[connection signal="button_up" from="TextureRect/reanudar" to="." method="_on_reanudar_button_up"]
[connection signal="button_up" from="TextureRect/salir" to="." method="_on_salir_button_up"]
